--- a/css/styles.css
+++ b/css/styles.css
@@ -245,6 +245,7 @@ p {
   background-color: var(--color-dark-background);
   padding-top: 200px;
   padding-bottom: 200px;
+  text-align: center;
 }
 .hero-title {
   font-weight: 900;
@@ -257,7 +258,7 @@ p {
   margin-bottom: 30px;
 }
 .hero-button {
-  display: block;
+  display: inline-block;
   font-family: inherit;
   cursor: pointer;
   font-weight: 700;
@@ -354,7 +355,6 @@ p {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  /* border-bottom-left-radius: 100px; */
 }
 .team-item:not(:last-child) {
   margin-right: 30px;
