--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,7 @@
   --color-primary: #fff;
   --color-secondary: #212121;
   --color-blue: #2196f3;
+  --color-hero-back: #c4c4c4;
   --color-dark-background: #2f303a;
   --color-dark-text: #757575;
   --color-button-filter: #f5f4fa;
@@ -241,11 +242,27 @@ p {
   color: var(--color-blue);
 }
 /* Hero section */
+
 .hero {
-  background-color: var(--color-dark-background);
+  background-color: var(--color-hero-back);
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
+}
+.overlay {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1600px;
+  min-width: 1200px;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero-img.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 .hero-title {
   font-weight: 900;
