--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,7 @@
   --color-button-filter: #f5f4fa;
   --color-logo-dark: #000;
   --color-address-gray: #acacb0;
+  --color-logos-gray: #afb1b8;
   --font-family: "Roboto", sans-serif;
   --font-family-logo: "Raleway", sans-serif;
   --font-size-main: 14px;
@@ -225,22 +226,38 @@ p {
 }
 .contacts {
   display: flex;
+  align-items: baseline;
   margin-left: auto;
 }
+/* fill="#afb1b8" style="fill: var(--color4, #afb1b8)"  */
 .contact-item + .contact-item {
   margin-left: 40px;
 }
+
 .contact-link {
   font-weight: 500;
   font-size: 14px;
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
+
+  padding-top: 20px;
+  padding-bottom: 20px;
+
   color: var(--color-dark-text);
+
+  display: flex;
+  align-items: center;
 }
 .contact-link:hover,
 .contact-link:focus {
   color: var(--color-blue);
+  fill: var(--color-blue);
 }
+.contact-icon {
+  fill: currentColor;
+  margin-right: 10px;
+}
+
 /* Hero section */
 
 .hero {
@@ -328,6 +345,18 @@ p {
   letter-spacing: 0.03em;
   color: var(--color-dark-text);
 }
+.feature-style {
+  background-color: var(--color-button-filter);
+  border-radius: 4px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  margin-bottom: 30px;
+
+  display: flex;
+}
+.features-icon {
+  margin: 0 auto;
+}
 /* Advantages section */
 .advantages {
   background-color: var(--color-primary);
@@ -392,6 +421,7 @@ p {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--color-dark-text);
+  margin-bottom: 16px;
 }
 .team-text-box {
   background-color: var(--color-primary);
@@ -400,6 +430,73 @@ p {
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+.social-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.social-list-item {
+}
+.social-list-item:not(:last-child) {
+  margin-right: 10px;
+}
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  color: var(--color-logos-gray);
+}
+.social-link:hover,
+.social-link:focus {
+  background-color: var(--color-blue);
+  color: #fff;
+}
+.social-net-icon {
+  fill: currentColor;
+}
+.social-links {
+}
+
+/* Customers Section */
+.customers-title {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: calc(42 / 36);
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 50px;
+}
+.customer-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.customer-list-item:not(:last-child) {
+  margin-right: 30px;
+}
+.customer-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid var(--color-logos-gray);
+  border-radius: 4px;
+  color: var(--color-logos-gray);
+}
+.customer-link:hover,
+.customer-link:focus {
+  border: 1px solid var(--color-blue);
+  color: var(--color-blue);
+}
+.customer-icon {
+  fill: currentColor;
+}
+
 /* Footer */
 .footer {
   background: var(--color-dark-background);
@@ -442,6 +539,59 @@ p {
 .address-link-dark:focus {
   color: var(--color-blue);
 }
+.logo-address {
+  margin-right: 70px;
+}
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+.social-net {
+}
+
+.social-text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--color-primary);
+  margin-bottom: 20px;
+}
+.social-net-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.list {
+}
+.social-net-item {
+  margin-right: 10px;
+}
+.net-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  color: var(--color-primary);
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+.net-link:hover,
+.net-link:focus {
+  background-color: var(--color-blue);
+  border-radius: 50%;
+}
+.link {
+}
+.social-icon {
+  fill: currentColor;
+}
+
 /* portfolio.html */
 .portfolio {
   background-color: var(--color-primary);
